syntax = "proto3";

package sonic_server;

service SonicNodeService {
  rpc GetNodeStatus (NodeStatusRequest) returns (NodeStatusResponse);
  rpc IngestData (IngestDataRequest) returns (IngestDataResponse);
  rpc SearchAndFetchItems (SearchItemsRequest) returns (SearchAndFetchItemsResponse);
}

message ItemDetails {
  string id = 1; // MongoDB _id
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
  string createdAt = 6;
}

message SearchItemsRequest {
  string query_string = 1;
  int32 limit = 2;
}

message SearchAndFetchItemsResponse {
  repeated ItemDetails items = 1;
}

message NodeStatusRequest {}

message NodeStatusResponse {
  string node_id = 1;
  bool is_ingest_connected = 2;
  bool is_search_connected = 3;
  int32 indexed_item_count = 4; 
  string message = 5;
  repeated string recent_errors = 6;
}

message IngestDataRequest {
  int32 start_index = 1;
  int32 limit = 2;
  string category_filter = 3; 
}

message IngestDataResponse {
  bool success = 1;
  int32 ingested_count = 2;
  string message = 3;
}